Fix grader contract for data pasien service
